--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -9,8 +9,26 @@
     <br/>
    <p class="text-center"> 
         {% if app.user.addresses|length ==0%}
-        Vous n'avez pas encore ajouté d'aerre dans votre compte client. Pour en ajouter une, veuillez 
-        <a href="{{ path('app_account_address_add') }}"> cliquez ici</a>
-    {% endif %}
+        Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez 
+        <a href="{{ path('app_account_address_form') }}"> cliquez ici</a>
+        {% else %}
+
+    <div class="row">
+        {% for address in app.user.addresses %}
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">{{address.name}}</h5>
+                <p class="card-text">
+                  {{address.address}}, <br>
+                  {{address.postal}} - {{address.city}} - {{address.contry}}
+                </p>
+                <a href="{{path('app_account_address_edit', {'id': address.id})}}">Modifier</a> | <a href="{{path('app_account_address_remove', {'id': address.id})}}">Supprimer</a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+      </div>
+{% endif %}
     </p>
 {% endblock %}
