--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -10,7 +10,7 @@
     <hr>
     <a href="{{ path('app_account_password') }}">Modifier mon mot de passe</a><br>
     <a href="{{ path('app_account_address') }}">Ajouter mes adresses</a><br>
-    - Mes commandes <br>
+    <a href="{{ path('app_order') }}">Mes commandes</a><br>
     <hr>
             
 
