--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -10,7 +10,7 @@
    <p class="text-center"> 
         {% if app.user.addresses|length ==0%}
         Vous n'avez pas encore ajouté d'adresse dans votre compte client. Pour en ajouter une, veuillez 
-        <a href="{{ path('app_account_address_form') }}"> cliquez ici</a>
+        <a href="{{ path('app_account_address_add') }}"> cliquez ici</a>
         {% else %}
 
     <div class="row">
