--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,10 @@
     <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{asset('assets/css/boutiquefrancaise.css')}}" rel="stylesheet">
 
+    {% block javascript %}
+       
+    {% endblock %}
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
