--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
-
-
+{% block javascript %}
+ <script src="https://js.stripe.com/v3/"></script> 
+{% endblock %}
 
 {% block title %}Paiement de  ma commande - La Boutique Française{% endblock %}
 
@@ -59,7 +60,7 @@
             <hr>
             <strong>Total : </strong> {{((total / 100) + carrier.price)|number_format(2, ',')}} €
 
-            <a class="btn btn-success btn-block mt-3" id="checkout-button">Payer | {{((total / 100) + carrier.price)|number_format(2, ',')}} €</a>
+            <a class="btn btn-success btn-block mt-3" href="{{path('sripe_create_session')}}">Payer | {{((total / 100) + carrier.price)|number_format(2, ',')}} €</a>
         </div>
     </div>  
 {% endblock %}
